Allow Mork projects to use preview Java APIs by default