@@ -192,6 +192,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <additionalOptions>--enable-preview</additionalOptions>
                     <source>${java.version}</source>
                     <doclint>all,-missing</doclint>
                 </configuration>
@@ -204,6 +205,7 @@
                     <compilerArgs>
                         <arg>-parameters</arg>
                         <arg>-Xlint:all,-this-escape</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
